--- a/project.config.json
+++ b/project.config.json
@@ -22,8 +22,8 @@
 	},
 	"compileType": "miniprogram",
 	"libVersion": "2.9.4",
-	"appid": "wx7c269387e7968d97",
-	"projectname": "miniprogram-1",
+	"appid": "wx9ff43bb3f5d8940c",
+	"projectname": "autofirst",
 	"debugOptions": {
 		"hidedInDevtools": []
 	},
