--- a/package.json
+++ b/package.json
@@ -17,13 +17,15 @@
   "author": "Xu <15116919113@163.com>",
   "license": "MIT",
   "dependencies": {
+    "node-sass": "^4.13.1",
     "redux": "^3.7.2",
     "redux-actions": "^2.2.1",
     "redux-promise": "^0.5.3",
-    "wepy": "^1.6.0",
+    "wepy": "^1.7.2",
     "wepy-async-function": "^1.4.7",
     "wepy-com-swiper": "^1.0.1",
     "wepy-com-toast": "^1.0.2",
+    "wepy-compiler-sass": "^1.3.12",
     "wepy-redux": "^1.5.3"
   },
   "devDependencies": {
@@ -34,9 +36,9 @@
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "cross-env": "^5.1.3",
-    "less": "^3.8.1",
-    "wepy-compiler-babel": "^1.5.1",
-    "wepy-compiler-less": "^1.3.10",
+    "less": "^3.11.1",
+    "wepy-compiler-babel": "^1.5.3",
+    "wepy-compiler-less": "^1.3.14",
     "wepy-plugin-uglifyjs": "^1.3.7"
   }
 }
