--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "less": "^3.11.1",
     "wepy-compiler-babel": "^1.5.3",
     "wepy-compiler-less": "^1.3.14",
+    "wepy-compiler-sass": "^1.3.12",
     "wepy-plugin-uglifyjs": "^1.3.7"
   }
 }
